# 10-2-JD-RESUME_MATCHING-Project

./: .gitignore  20250824 김태수 이력서.docx  ARCHITECTURE.md  CRAWLING_GUIDE.md  DEPLOYMENT_GUIDE.md  GPU_DEPLOYMENT.md  PROJECT_SPECIFICATION.md  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.gpu  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_08_1041-7adbfdf43b0d_initial_migration.py  2025_10_11_0836-ad5da92d3a14_add_sectional_embeddings.py  2025_10_14_0653-eb2d17db17c3_add_unique_index_for_jobs.py  2025_10_16_1514-a96117a55003_add_resume_sentence_and_job_sentence_.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  feedback.py  jobs.py  matching.py  resumes.py  users.py
backend/app/core/: cache.py  config.py  database.py  logging.py  security.py  storage.py
backend/app/models/: __init__.py  company.py  feedback.py  job.py  matching.py  resume.py  sentences.py  user.py
backend/app/repositories/: job_repository.py  matching_repository.py  resume_repository.py  user_repository.py
backend/app/schemas/: __init__.py  feedback.py  job.py  matching.py  resume.py  user.py
backend/app/services/: auth_service.py  feedback_service.py  job_service.py  matching_service.py  resume_service.py
backend/app/services/indexing/: sentence_indexer.py
backend/app/services/llm/: openai_client.py  prompt_templates.py
backend/app/utils/: helpers.py  validators.py
backend/scripts/: backfill_sentences.py  test_multiple_resumes.py
(+196 files in other folders)
